--- a/index.html
+++ b/index.html
@@ -3,7 +3,18 @@
   <head>
     <meta charset="UTF-8">
     <title>Referral by tusharmaroo</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1">
+    <meta charset="utf-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta property="fb:app_id" content="920841141333066"/>
+    <meta property="og:title" content="TinyOwl | Food delivery | Dishes"/>
+    <meta property="og:url" content="https://tinyowl.com/"/>
+    <meta property="og:description" content="Your simplest way to food."/>
+    <meta property="og:image" content="https://tinyowl.com/tinyowl-og.jpg"/>
+    <meta content="TinyOwl" property="og:site_name"/>
+    <meta name="keywords" content="TinyOwl, food"/>
+    <meta name="mobile-web-app-capable" content="yes"/>
+    <link rel="apple-touch-icon" href="apple-touch-icon.png?v=1"/>
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
