Changed og:url to play store link

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta property="fb:app_id" content="920841141333066"/>
     <meta property="og:title" content="TinyOwl | Food delivery | Dishes"/>
-    <meta property="og:url" content="https://tinyowl.com/"/>
+    <meta property="og:url" content="https://play.google.com/store/apps/details?id=com.flutterbee.tinyowl"/>
     <meta property="og:description" content="Your simplest way to food."/>
     <meta property="og:image" content="https://tinyowl.com/tinyowl-og.jpg"/>
     <meta content="TinyOwl" property="og:site_name"/>
