Adding twitter cards as well

--- a/index.html
+++ b/index.html
@@ -14,6 +14,18 @@
     <meta content="TinyOwl" property="og:site_name"/>
     <meta name="keywords" content="TinyOwl, food"/>
     <meta name="mobile-web-app-capable" content="yes"/>
+
+    <meta name="twitter:card" content="app">
+    <meta name="twitter:site" content="@TinyOwl_App">
+    <meta name="twitter:description" content="Your simplest way to food.">
+    <meta name="twitter:app:country" content="IN">
+    <meta name="twitter:app:name:iphone" content="tinyowl">
+    <meta name="twitter:app:id:iphone" content="916154166">
+    <meta name="twitter:app:url:iphone" content="https://itunes.apple.com/IN/app/id916154166?mt=8">
+    <meta name="twitter:app:name:googleplay" content="tinyowl">
+    <meta name="twitter:app:id:googleplay" content="com.flutterbee.tinyowl">
+    <meta name="twitter:app:url:googleplay" content="https://play.google.com/store/apps/details?id=com.flutterbee.tinyowl">
+
     <link rel="apple-touch-icon" href="apple-touch-icon.png?v=1"/>
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
