Adding large summary cards as well

--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
     <meta name="twitter:app:id:googleplay" content="com.flutterbee.tinyowl">
     <meta name="twitter:app:url:googleplay" content="https://play.google.com/store/apps/details?id=com.flutterbee.tinyowl">
 
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:creator" content="@tusharmaroo">
+    <meta name="twitter:title" content="TinyOwl | Food delivery | Dishes">
+    <meta name="twitter:image" content="https://tinyowl.com/tinyowl-og.jpg">
+
     <link rel="apple-touch-icon" href="apple-touch-icon.png?v=1"/>
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
