Changing link to use branch.io

--- a/index.html
+++ b/index.html
@@ -55,8 +55,7 @@
       }
       else if( userAgent.match( /Android/i ) )
       {
-
-        return "https://play.google.com/store/apps/details?id=com.flutterbee.tinyowl";
+        return "https://bnc.lt/LsQh/LZSLl8UKKp";
       }
       else
       {
